--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 <header class="site-header">
   <div class="brand">
-    <svg class="discord-logo" viewBox="0 0 71 55" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <path fill="#5865F2" d="M60.2 4.6A58.4 58.4 0 0046.3.5a41.8 41.8 0 00-1.9 4.1c-5.6-1.7-11.5-1.7-17.1 0A42.6 42.6 0 0023.4.5 58.4 58.4 0 008.8 4.6C2.5 19.2 1.6 32.4 4.2 44.1c5.4 4.1 10.6 6.8 15.6 8.4 1.2-.9 2.3-1.9 3.3-3 2.4 1 4.9 1.6 7.5 1.9 2.6.3 5.2.3 7.8 0 2.6-.3 5.1-.9 7.5-1.9 1 1.1 2.1 2.1 3.3 3 5-.6 10.2-4.3 15.6-8.4 2.6-11.7 1.7-24.9-5-39.5zM24.6 37.7c-3 0-5.4-2.8-5.4-6.1 0-3.3 2.4-6.1 5.4-6.1 3 0 5.5 2.8 5.4 6.1.1 3.3-2.4 6.1-5.4 6.1zm21.9 0c-3 0-5.4-2.8-5.4-6.1 0-3.3 2.4-6.1 5.4-6.1 3 0 5.4 2.8 5.4 6.1-.1 3.3-2.5 6.1-5.4 6.1z"/>
-    </svg>
+    <img src="https://www.svgrepo.com/show/353655/discord-icon.svg" class="discord-logo" alt="Discord Logo">
     <h1 class="title">Ego Store</h1>
   </div>
   <nav class="nav">
@@ -25,7 +23,6 @@
 
 <main class="container">
   <article id="conteudo" class="card neon">
-    <!-- Conteúdo carregado aqui -->
   </article>
 </main>
 
@@ -99,7 +96,7 @@ function mostrar(chave){
   document.getElementById('conteudo').innerHTML = conteudos[chave];
 }
 
-mostrar('termos'); // Carrega termos por padrão
+mostrar('termos');
 document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 
